# bia-transcript

./: .gitignore  Dockerfile  README.md  app.py  do-app.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
templates/: index.html
tests/: test_opus_upload.py  test_processing_with_mocks.py
