[tool.poetry]
name = "bia-transcript"
version = "0.1.0"
description = "Audio Transcription API using FastAPI and Whisper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-multipart = ">=0.0.6"
jinja2 = ">=3.1.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
