[tool.poetry]
name = "bia-transcript"
version = "0.1.0"
description = "Audio Transcription API using FastAPI and Whisper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
jinja2 = "*"
requests = "*"
vosk = "*"
soundfile = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
